package progra2.utn.uml.domain.computadora;

public class PlacaMadre {
}
