@startuml
class Computadora {
-marca: String
-numeroSerie: int
-placaMadre: PlacaMadre
-propietario: Propietario
+setPropietario(nuevo: Propietario):void
}
class PlacaMadre {
-modelo: String
-chipset: String
}

class Propietario {
-nombre: String
-dni: int
+setComputadora(nueva: Computadora):void
}

Computadora "1" *-- "1" PlacaMadre : composición
Computadora "1" -- "1" Propietario : asociación (bi)
@enduml